[package]
name = "k-means-gpu"
version = "0.1.0"
edition = "2021"
authors = ["Benoit Vermont <redwarp@gmail.com>"]
description = "Calculates the k average colors in an image."
readme = "README.md"
license = "MIT"
repository = "https://github.com/redwarp/k-means-gpu"
keywords = ["image", "wgpu", "k-means"]
categories = ["graphics", "multimedia::images", "command-line-utilities"]
exclude = ["gfx", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.24"
wgpu = "0.12"
bytemuck = { version = "1.8", features = ["derive"] }
anyhow = "1.0"
pollster = "0.2"
clap = { version = "3.0", features = ["cargo", "derive"] }
palette = "0.6"
log = "0.4"
env_logger = "0.9"
