[workspace]
members = ["core", "cli", "preprocessor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Benoit Vermont <redwarp@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/redwarp/k-means-gpu"
categories = ["graphics", "multimedia::images"]
exclude = ["gfx", ".vscode"]
