[workspace]
members = ["core", "cli", "preprocessor"]
default-members = ["cli", "core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Benoit Vermont <redwarp@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/redwarp/k-means-gpu"
categories = ["graphics", "multimedia::images"]
exclude = ["gfx", ".vscode"]

[workspace.dependencies]
kmeans-color-gpu = { version = "0.1.0", path = "./core" }
kmeans-color-gpu-preprocessor = { version = "0.1.0", path = "./preprocessor" }
