[package]
name = "kmeans-color-gpu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["image", "wgpu", "k-means", "cli"]
description = "Command line tool to use the color-quantization-gpu library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
anyhow = "1.0"
pollster = "0.3"
clap = { version = "4.2", features = ["cargo", "derive"] }
log = "0.4"
env_logger = "0.10"
regex = "1.7"
kmeans-color-gpu.workspace = true
bytemuck = "1.13"
rgb = "0.8"
