[package]
name = "color-quantization-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["image", "wgpu", "k-means"]
description = "Calculates the average colors in an image for color quantization on the GPU."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.14"
bytemuck = { version = "1.12", features = ["derive", "extern_crate_alloc"] }
anyhow = "1.0"
palette = "0.6"
log = "0.4"

[dev-dependencies]
pollster = "0.2"
