[package]
name = "kmeans-color-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["image", "wgpu", "k-means"]
description = "Calculates the average colors in an image for color quantization on the GPU."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wgpu = "0.15"
bytemuck = { version = "1.12", features = ["derive", "extern_crate_alloc"] }
anyhow = "1.0"
palette = "0.7"
log = "0.4"
rgb = { version = "0.8", features = ["as-bytes"] }

[dev-dependencies]
pollster = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
gif = "0.12"

[build-dependencies]
kmeans-color-gpu-preprocessor = { path = "../preprocessor" }
