[package]
name = "preprocessor"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
regex = "1.6"
pathdiff = "0.2"
anyhow = "1.0"
naga = { version = "0.10", optional = true, features = ["validate", "wgsl-in"] }
codespan-reporting = { version = "0.11", optional = true }

[features]
validate = ["naga", "codespan-reporting"]
