[package]
name = "kmeans-color-gpu-preprocessor"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
description = "A shader preprocessor, to replace #includes in shaders by appropriate files."

[dependencies]
regex = "1.7"
pathdiff = "0.2"
anyhow = "1.0"
naga = { version = "0.11", optional = true, features = ["validate", "wgsl-in"] }
codespan-reporting = { version = "0.11", optional = true }

[features]
validate = ["naga", "codespan-reporting"]
